--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,11 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="@string/text_music"/>
+        <TextView
+            android:id="@+id/text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="진행 시간: "/>
         <SeekBar
             android:id="@+id/seek1"
             android:layout_width="match_parent"
